<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/beige_1"
    android:backgroundTint="#F3EDEB"
    android:backgroundTintMode="src_over"
    android:foregroundTint="#F3EDEB"
    android:foregroundTintMode="screen"
    android:orientation="vertical"
    android:paddingLeft="45sp"
    android:paddingTop="30sp"
    android:paddingRight="45sp"
    tools:context=".ResetPassword02">

    <ImageView
        android:id="@+id/rp2logo"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginBottom="45sp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/customborder"
        android:backgroundTint="@color/beige_2"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/rp2inputPassword"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/enterNewPassword"
            android:inputType="textPassword"
            android:overScrollMode="always"
            android:textSize="15dp"
            android:visibility="visible"
            tools:ignore="DuplicateIds,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/customborder"
        android:backgroundTint="@color/beige_2"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/rp2inputConfirmPassword"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:overScrollMode="always"
            android:textSize="15dp"
            android:visibility="visible"
            tools:ignore="DuplicateIds,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>


    <Button
        android:id="@+id/rp2Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="40sp"
        android:backgroundTint="@color/graphite"
        android:text="@string/resetpw"
        android:textColor="@color/beige_2" />

</LinearLayout>